# seco

./: .env.example  .gitattributes  .gitignore  ABOUT.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
api/: README.md  __init__.py  deps.py  main.py
api/routers/: ask.py  buildings.py  ingest.py  registry.py  reports.py  search.py  settings.py
app/: streamlit_app.py
design-system/buildinglens/: MASTER.md  V2-FIRST-LIGHT.md  V3-CLASSIFIED.md
docs/: README.fr.md  api.md  architecture.md  data-sources.md  demo-script.md
docs/superpowers/specs/: 2026-06-17-react-app-design.md  2026-06-18-buildinglens-v2-design.md  2026-06-19-search-deep-pass-design.md
eval/: eval_extraction.py  gold.jsonl
scripts/: dev.py  make_demo_reports.py
src/buildinglens/: __init__.py  build_ai.py  communes.py  config.py  db.py  dedup.py  extract.py  geocode.py  ingest_pdf.py  ingest_structured.py  llm.py  pipeline.py  rag.py  reports.py  scoring.py  statec.py  synthetic_reports.py
tests/: test_communes.py  test_db.py  test_dedup.py  test_ingest_dedup.py  test_llm.py  test_registry_pool.py  test_search_rag.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/: Layout.tsx  RegistrySearch.tsx
web/src/i18n/: en.json  fr.json  index.ts
web/src/lib/: chartTheme.ts  cn.ts  dossier.ts  pageCache.ts  risk.ts
web/src/pages/: BuildingPage.tsx  IngestPage.tsx  LandingPage.tsx  NotFoundPage.tsx  PortfolioPage.tsx  (+2 more)
(+34 files in other folders)
